<resources>
    <string name="app_name">Demo</string>
    <string name="bton">Bluetooth ON</string>
    <string name="btoff">Bluetooth OFF</string>
    <string name="btdiscover">Bluetooth Discover</string>
    <string name="btpair">Bluetooth pair</string>
    <string name="init">...</string>
    <string name="btscan">Bluetooth Scan</string>
    <string name="paired_title">Paired List</string>
    <string name="scan_title">Scan device result List</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>